idf_component_register(
    SRCS
        "main.cpp"
        "Constants.h"
        "esp_random_max.h"
        "hue_to_rgb.h"
        "Animation.hpp"
        "BlinkComplement.hpp"
        "Blinkvolution.hpp"
        "DropIn.hpp"
        "Fibonacci.hpp"
        "FlashWhite.hpp"
        "RainbowDichromatic.hpp"
        "RainbowFibonacci.hpp"
        "RainbowFull.hpp"
        "RainbowSingleColorSlice.hpp"
    INCLUDE_DIRS "."
)
