idf_component_register(
    SRCS
        "main.cpp"
        "Constants.h"
        "esp_random_max.h"
        "actual_led_strip_set_pixel_hsv.h"
        "Animation.hpp"
        "BlinkComplement.hpp"
        "Blinkvolution.hpp"
        "DropIn.hpp"
        "Fibonacci.hpp"
        "FlashWhite.hpp"
        "RainbowDichromatic.hpp"
        "RainbowFibonacci.hpp"
        "RainbowFull.hpp"
        "RainbowSingleColorSlice.hpp"
    INCLUDE_DIRS "."
)
